--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!DOCTYPE html><html lang="en"><head><link rel="stylesheet" href="/index.bbb5ea3b.css"><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Power Cut Schedule - Sri Lanka</title></head><body> <script src="/index.35c88ab3.js" type="module"></script> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Power Cut Schedule - Sri Lanka</title>
+    <link rel="stylesheet" href="./index.bbb5ea3b.css" />
+  </head>
+  <body>
+    <script src="./index.35c88ab3.js" type="module"></script>
+  </body>
+</html>
