Using rollup to build

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Power Cut Schedule - Sri Lanka</title>
-    <link rel="stylesheet" href="./index.bbb5ea3b.css" />
+    <link rel="stylesheet" href="./bundle.css" />
   </head>
   <body>
-    <script src="./index.35c88ab3.js" type="module"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mithril/2.2.2/mithril.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="./bundle.js" type="module"></script>
   </body>
 </html>
