--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="Powercut Schedule - Sri Lanka" />
+    <meta
+      name="description"
+      content="A mobile-friendly lightweight website to get the up-to-date powercut schedule/loading shedding schedule for Sri Lanka."
+    />
+    <meta
+      name="keywords"
+      content="powercut, Srilanka, loading shedding, powercut schedule"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="English" />
+    <meta name="author" content="Evoke Apps LLC" />
     <title>Power Cut Schedule - Sri Lanka</title>
     <link rel="stylesheet" href="./bundle.css" />
   </head>
